main.css
/* ... */
#news {
    opacity: 60%;
}
#news-container {
    padding-top: 16px;
    flex-flow: row wrap;
    padding-bottom: 46px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
    background-color: rgba(256,256,256, 0.7);
}
/*#news-container-2 {*/
/*    padding-top: 100px;*/
/*    padding-bottom: 200px;*/
/*    display: flex;*/
/*    align-items: center;*/
/*    justify-content: center;*/
/*    width: 100%;*/
/*    height: auto;*/
/*    background-color: rgba(256,256,256, 0.7);*/
/*}*/
#news-container-1-nested-0, #news-container-1-nested-1, #news-container-1-nested-2, #news-container-2-nested-0, #news-container-2-nested-1, #news-container-2-nested-2 {
    /*text-wrap: none;*/
    width: 33%;
    height: 360px;
}
#news-img-2 {
    padding: 23px;
    opacity: 90%;
    width: 100%;
    height: auto;
}
#news-img-1 {
    padding: 23px;
    opacity: 90%;
    width: 100%;
    height: auto;
}
#news-text-1, #news-text-2 {
    color: black;
    padding-left: 25px;
    padding-right: 55px;
    font-size: 20px;
}
#news:hover {
    opacity: 100%;
}
#maincontent > #glgaming-top {
    margin: 1%;
    height: 700px;
    display: flex;
    background-color: rgba(0, 0, 0, 0.8);
    align-items: center;
    justify-content: center;
    flex-flow: column wrap;
}
#glgaming-top-img {
    height: 400px;
    width: auto;
    padding-bottom: 90px;
    align-items: center;
    justify-content: center;
}
#glgaming-top-link {
    margin-bottom: 20px;
    font-size: 17px;
    padding: 13px;
    border: 4px solid white;
    border-radius: 10px;
    color: white;
}
#glgaming-top-link:hover {
    opacity: 60%;
}
#discord-container-main {
    padding-right: 60px;
    padding-top: 120px;
    height: 650px;
    background-color: rgba(59, 60, 64, 0.9);
    width: 98%;
    position: relative;
    margin-right: 1%;
    margin-left: 1%;
    margin-bottom: 1%;
}
#discord-server-widget {
    height: 400px;
    width: 35%;
}
#discord-server-widget-container {
    display: flex;
    justify-content: flex-end;
}
#discord-container-text {
    padding-left: 40px;
    color: rgba(123, 123, 123);
    position: absolute;
    width: 60%;
}
#discord-container-text-h2 {
    padding-bottom: 50px;
}
#discord-container-text-h3 {
    padding-bottom: 70px;
}
#maincontent > #video-container {
    width: 98%;
    height: auto;
    margin: 1%;
    background-color: rgba(59, 60, 64, 0.8)
}
#video {
    width: 100%;
    height: 90vh;
}
#previous-broadcasts {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 7.1813285457809695vh;
    background-color: rgba(0, 0, 0, 0.8);
}
#previous-broadcasts-text {
    color: white;
    font-size: 2rem;
}
#previous-broadcasts-video-container {
    display: flex;
    flex-flow: row nowrap;
    margin: 1%;
}
#gitwu-container {
    background-color: rgba(59, 60, 64, 0.9);
    margin: 1%;
}
#gitwu {
    margin-left: 20px;
    margin-right: 20px;
    border-bottom: 3px solid white;
    padding: 20px;
    color: white;
}
input[type=text], select, textarea {
    width: 100%;
    padding: 17px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
}

input[type=submit] {
    background-color: rgba(59, 60, 64, 0.01);
    border: 3px solid white;
    color: white;
    padding: 12px 20px;
    font-size: 1rem;
    border-radius: 4px;
    cursor: pointer;
}
input[type=submit]:hover {
    background-color: rgba(9, 108, 152, 1)
}
#gitwu-contactform-container {
    padding: 20px;
}
#contactform #alert {
    display: flex;
    justify-content: center;
    flex-flow: row wrap;
}
#firstn, #lastn, #email, #country, #subject {
    border-radius: 5px;
}
label {
    font-weight: bold;
    color: white;
}
#invalidfirstn {
    display: none;
    border: 2px solid rgb(177, 0, 0);
    border-radius: 5px;
    background-color: rgba(250, 61, 61, 0.7);
    color: black;
    margin-top: 2%;
    margin-bottom: 2%;
    padding: 9px;
}
#invalidlastn {
    display: none;
    border: 2px solid rgb(177, 0, 0);
    border-radius: 5px;
    background-color: rgba(250, 61, 61, 0.7);
    color: black;
    margin-top: 2%;
    margin-bottom: 2%;
    padding: 9px;
}
#invalidemail {
    display: none;
    border: 2px solid rgb(177, 0, 0);
    border-radius: 5px;
    background-color: rgba(250, 61, 61, 0.7);
    color: black;
    margin-top: 2%;
    margin-bottom: 2%;
    padding: 9px;
}
#empty {
    display: none;
    border: 2px solid rgb(177, 0, 0);
    border-radius: 5px;
    background-color: rgba(250, 61, 61, 0.7);
    color: black;
    margin-top: 2%;
    margin-bottom: 2%;
    padding: 9px;
}
#invalidsubject {
    display: none;
    border: 2px solid rgb(177, 0, 0);
    border-radius: 5px;
    background-color: rgba(250, 61, 61, 0.7);
    color: black;
    margin-top: 2%;
    margin-bottom: 2%;
    padding: 9px;
}
#contactform > #alert {
    width: 100%;
    display: none;
    border: 2px solid rgb(48, 151, 6);
    border-radius: 5px;
    margin: 0.5%;
    padding: 10px;
    background-color: rgba(76, 255, 65, 0.7);
}
#backgroundvideo {
    width: 98%;
    height: auto;
    margin-top: 1%;
    margin-left: 1%;
    margin-right: 1%;
}
#videobackground-container {
    position: relative;
}
#videomessage-overlay {
    position: absolute;
    background-color: black;
    opacity: 60%;
    width: 98%;
    height: 98%;
    margin: 1%;
}
#videomessage {
    width: 98%;
    margin: 1%;
    height: auto;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
    top: 15%;
    position: absolute;
    color: white;
}
#videomessage-logo {
    width: 28%;
    border: 3px solid white;
    padding: 20px;
    border-radius: 10px;
    margin-bottom: 11%;
}
#videomessage-h1 {
    font-size: 4rem;
    margin-bottom: 3%;
}#videomessage-h2 {
    font-size: 2rem;
    margin-bottom: 5%;
}
/* ... */

